sana_derive/tests/ui/fail-04-ambiguity.stderr
error: Ambiguous rule
 --> $DIR/fail-04-ambiguity.rs:9:5
  |
9 |     Token2,
  |     ^^^^^^
